--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -290,6 +290,9 @@
                <Test
                   Identifier = "UPCEBlackBox2TestCase">
                </Test>
+               <Test
+                  Identifier = "UPCEBlackBox3ReflectiveTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
