--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -299,6 +299,9 @@
                <Test
                   Identifier = "EAN13BlackBox4TestCase">
                </Test>
+               <Test
+                  Identifier = "QRCodeDecodedBitStreamParserTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
