--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -302,6 +302,9 @@
                <Test
                   Identifier = "QRCodeDecodedBitStreamParserTestCase">
                </Test>
+               <Test
+                  Identifier = "ErrorCorrectionLevelTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
