--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -305,6 +305,9 @@
                <Test
                   Identifier = "ErrorCorrectionLevelTestCase">
                </Test>
+               <Test
+                  Identifier = "FormatInformationTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
