--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -308,6 +308,9 @@
                <Test
                   Identifier = "FormatInformationTestCase">
                </Test>
+               <Test
+                  Identifier = "ModeTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
