--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -311,6 +311,9 @@
                <Test
                   Identifier = "ModeTestCase">
                </Test>
+               <Test
+                  Identifier = "VersionTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
