--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -314,6 +314,9 @@
                <Test
                   Identifier = "VersionTestCase">
                </Test>
+               <Test
+                  Identifier = "BitVectorTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
