--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -317,6 +317,9 @@
                <Test
                   Identifier = "BitVectorTestCase">
                </Test>
+               <Test
+                  Identifier = "EncoderTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
