--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -320,6 +320,9 @@
                <Test
                   Identifier = "EncoderTestCase">
                </Test>
+               <Test
+                  Identifier = "MaskUtilTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
