--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -323,6 +323,9 @@
                <Test
                   Identifier = "MaskUtilTestCase">
                </Test>
+               <Test
+                  Identifier = "MatrixUtilTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
