--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -90,6 +90,9 @@
                   Identifier = "BitSourceTestCase">
                </Test>
                <Test
+                  Identifier = "BitVectorTestCase">
+               </Test>
+               <Test
                   Identifier = "CalendarParsedResultTestCase">
                </Test>
                <Test
@@ -141,6 +144,9 @@
                   Identifier = "EAN13BlackBox3TestCase">
                </Test>
                <Test
+                  Identifier = "EAN13BlackBox4TestCase">
+               </Test>
+               <Test
                   Identifier = "EAN13BlackBox5BlurryTestCase">
                </Test>
                <Test
@@ -151,6 +157,12 @@
                </Test>
                <Test
                   Identifier = "EmailAddressParsedResultTestCase">
+               </Test>
+               <Test
+                  Identifier = "EncoderTestCase">
+               </Test>
+               <Test
+                  Identifier = "ErrorCorrectionLevelTestCase">
                </Test>
                <Test
                   Identifier = "ExpandedInformationDecoderTest">
@@ -168,6 +180,9 @@
                   Identifier = "FieldParserTest">
                </Test>
                <Test
+                  Identifier = "FormatInformationTestCase">
+               </Test>
+               <Test
                   Identifier = "GeoParsedResultTestCase">
                </Test>
                <Test
@@ -178,6 +193,15 @@
                </Test>
                <Test
                   Identifier = "ITFBlackBox2TestCase">
+               </Test>
+               <Test
+                  Identifier = "MaskUtilTestCase">
+               </Test>
+               <Test
+                  Identifier = "MatrixUtilTestCase">
+               </Test>
+               <Test
+                  Identifier = "ModeTestCase">
                </Test>
                <Test
                   Identifier = "ParsedReaderResultTestCase">
@@ -211,6 +235,12 @@
                </Test>
                <Test
                   Identifier = "QRCodeBlackBox5TestCase">
+               </Test>
+               <Test
+                  Identifier = "QRCodeDecodedBitStreamParserTestCase">
+               </Test>
+               <Test
+                  Identifier = "QRCodeTestCase">
                </Test>
                <Test
                   Identifier = "ReedSolomonDecoderDataMatrixTestCase">
@@ -294,37 +324,10 @@
                   Identifier = "URIParsedResultTestCase">
                </Test>
                <Test
-                  Identifier = "WifiParsedResultTestCase">
-               </Test>
-               <Test
-                  Identifier = "EAN13BlackBox4TestCase">
-               </Test>
-               <Test
-                  Identifier = "QRCodeDecodedBitStreamParserTestCase">
-               </Test>
-               <Test
-                  Identifier = "ErrorCorrectionLevelTestCase">
-               </Test>
-               <Test
-                  Identifier = "FormatInformationTestCase">
-               </Test>
-               <Test
-                  Identifier = "ModeTestCase">
-               </Test>
-               <Test
                   Identifier = "VersionTestCase">
                </Test>
                <Test
-                  Identifier = "BitVectorTestCase">
-               </Test>
-               <Test
-                  Identifier = "EncoderTestCase">
-               </Test>
-               <Test
-                  Identifier = "MaskUtilTestCase">
-               </Test>
-               <Test
-                  Identifier = "MatrixUtilTestCase">
+                  Identifier = "WifiParsedResultTestCase">
                </Test>
             </SkippedTests>
          </TestableReference>
