Separate unit and blackbox tests into different targets
By default both sets of tests will still run, but this makes it easier
to run just one set of tests.


Former-commit-id: 894f0b84277352aff17aa11ddab45ce53c456914

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # Mac OS X Finder
 .DS_Store
 
-# XCode per-user config
+# Xcode per-user config
 *.mode1
 *.mode1v3
 *.mode2v3
 *.perspective
 *.perspectivev3
 *.pbxuser
-*.xcworkspace
 xcuserdata
+*.xccheckout
 
 # Build products
 build/
