Fix project file
Former-commit-id: bf2b2d9b3c3d9627ef3f83c8866ae25e99914764

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC-osx.xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC-osx.xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "25404177166AADAC00E13304"
-               BuildableName = "ZXingObjCTests-osx.octest"
+               BuildableName = "Unit Tests OS X.octest"
                BlueprintName = "Unit Tests OS X"
                ReferencedContainer = "container:ZXingObjC.xcodeproj">
             </BuildableReference>
