Convert to XCTest
Former-commit-id: 81bbbec5c33e878086a2ac97664aa1a79a8b7f7a

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC-iOS.xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC-iOS.xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "25403CC3166A96FA00E13304"
-               BuildableName = "Unit Tests iOS.octest"
+               BuildableName = "Unit Tests iOS.xctest"
                BlueprintName = "Unit Tests iOS"
                ReferencedContainer = "container:ZXingObjC.xcodeproj">
             </BuildableReference>
