Target BarcodeScanner for iPhone and iPad
Former-commit-id: 8edeab77bc79761ae717f3907d3f0dc36654de9e

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC-iOS.xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC-iOS.xcscheme
@@ -39,6 +39,15 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "024D10DA156EAB6F00FE6872"
+            BuildableName = "BarcodeScanner.app"
+            BlueprintName = "BarcodeScanner"
+            ReferencedContainer = "container:examples/BarcodeScanner/BarcodeScanner.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </TestAction>
    <LaunchAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
